UI优化，以及初步实现@可选人功能（TODO:已关注列表缓存进数据库，@选择界面根据输入自动筛选提示）

--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -33,7 +33,7 @@
 	    android:layout_height="wrap_content"
 	    android:layout_below="@id/login_user_input"
 	    android:singleLine="true"
-	    android:inputType="text"
+	    android:inputType="textEmailAddress"
 	    />
 	    <!-- 密码 text -->
 	    <TextView
@@ -83,7 +83,7 @@
 	
 	<RelativeLayout 
       android:layout_width="fill_parent"
-      android:layout_height="wrap_content"
+      android:layout_height="0dip"
       android:layout_weight="1"
       >
         <TextView  android:id="@+id/register_link"
