--- a/res/layout/write.xml
+++ b/res/layout/write.xml
@@ -1,97 +1,132 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:id="@+id/layout_root" android:orientation="vertical"
-	android:layout_width="fill_parent" android:layout_height="fill_parent"
-	android:background="#e7e7e7">
+    android:id="@+id/layout_root"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="#e7e7e7"
+    android:orientation="vertical" >
 
-	<!-- Header -->
-    <include layout="@layout/header_write"/>
+    <!-- Header -->
 
-    <RelativeLayout android:layout_width="fill_parent"
-        android:layout_height="50dp"
-        android:padding="3dp"
-        >
-        <!-- 图片预览 -->
-        <ImageView android:id="@+id/preview" 
+    <include layout="@layout/header_write" />
+
+    <!-- main text input -->
+
+    <EditText
+        android:id="@+id/tweet_edit"
+        android:layout_width="fill_parent"
+        android:layout_height="0dip"
+        android:layout_weight="1"
+        android:gravity="top"
+        android:hint="@string/write_label_send_hint"
+        android:imeOptions="actionSend|flagNoEnterAction"
+        android:textSize="15dp" />
+
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="36dp"
+        android:padding="3dp" >
+
+        <ImageView
+            android:id="@+id/preview"
             android:layout_width="50dp"
             android:layout_height="fill_parent"
             android:layout_alignParentLeft="true"
             android:visibility="invisible" />
-        <ImageView android:id="@+id/image_delete"
+
+        <ImageView
+            android:id="@+id/image_delete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/preview"
             android:layout_centerInParent="true"
-            android:src="@drawable/delete"
-            android:visibility="invisible"
+            android:layout_toRightOf="@id/preview"
             android:clickable="true"
-            />
+            android:src="@drawable/delete"
+            android:visibility="invisible" />
 
-        <!-- 提示框 -->
-        <TextView android:id="@+id/progress_text"
-            android:layout_width="wrap_content" 
+        <TextView
+            android:id="@+id/progress_text"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:textColor="#FF000000"
-            android:layout_marginLeft="2dp" />
-            
-        <LinearLayout android:layout_height="fill_parent"
-            android:layout_width="65dp" android:layout_alignParentRight="true"
-            android:layout_centerVertical="true" android:gravity="center"
-            android:background="@drawable/write_corner"
-            >
+            android:layout_marginLeft="2dp"
+            android:textColor="#FF000000" />
 
-            <!-- 字数统计 -->
-            <TextView android:id="@+id/chars_text" android:layout_width="wrap_content"
-                android:layout_height="wrap_content" 
-                android:textSize="13dp" android:textColor="#FF000000"
-                android:layout_marginRight="3dp" android:text="140" /><!-- 140 -->
-            <TextView android:id="@+id/chars_word" android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:layout_alignParentTop="true"
-                android:layout_alignParentRight="true" android:layout_marginRight="2dp"
-                android:text="@string/write_label_you_can_type_suffix" /><!-- 字 -->
-            <!--  <TextView android:id="@+id/char_you_can"
-                android:layout_width="wrap_content" android:layout_height="wrap_content"
-                 android:text="@string/write_label_you_can_type_prefix" />-->
+        <LinearLayout
+            android:layout_width="65dp"
+            android:layout_height="fill_parent"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:gravity="center" >
+
+            <TextView
+                android:id="@+id/chars_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="3dp"
+                android:text="140"
+                android:textColor="#FF000000"
+                android:textSize="13dp" />
+
+            <TextView
+                android:id="@+id/chars_word"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginRight="2dp"
+                android:text="@string/write_label_you_can_type_suffix" />
         </LinearLayout>
     </RelativeLayout>
 
-
-	<!-- main text input -->
-	<EditText android:id="@+id/tweet_edit" android:layout_width="fill_parent"
-	    android:hint="@string/write_label_send_hint"
-		android:layout_height="fill_parent" android:layout_weight="1"
-		android:textSize="15dp" android:imeOptions="actionSend|flagNoEnterAction"
-		android:gravity="top" />
-
-	<LinearLayout android:id="@+id/post_button_bar"
-	    android:layout_width="fill_parent" 
+    <LinearLayout
+        android:id="@+id/post_button_bar"
+        android:layout_width="fill_parent"
         android:layout_height="50dp"
-	    android:layout_alignParentBottom="true"
-	    android:background="@drawable/send_message_block">
-		<!-- @某人 -->
-		<ImageButton android:layout_gravity="center_vertical"
-			android:id="@+id/add_user" android:background="@null"
-			android:layout_width="wrap_content" android:layout_height="wrap_content"
-			android:src="@drawable/toolbar_mention" android:layout_weight="0.2" />
-		<!-- 拍照按钮 -->
-		<ImageButton android:layout_gravity="center_vertical"
-			android:id="@+id/camera_button" android:background="@null"
-			android:layout_width="wrap_content" android:layout_height="wrap_content"
-			android:src="@drawable/toolbar_camera" android:layout_weight="0.2" />
-		<!-- 选择图片 -->
-		<ImageButton android:layout_gravity="center_vertical"
-			android:id="@+id/choose_images_button" android:background="@null"
-			android:layout_width="wrap_content" android:layout_height="wrap_content"
-			android:src="@drawable/toolbar_media" android:layout_weight="0.2" />
-		<!-- LBS按钮 -->
-		<ImageButton android:layout_gravity="center_vertical"
-		    android:visibility="gone"
-			android:id="@+id/location_button" android:background="@null"
-			android:layout_width="wrap_content" android:layout_height="wrap_content"
-			android:src="@drawable/toolbar_geo_off" android:layout_weight="0.2" />
-</LinearLayout>
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/send_message_block" >
 
+        <!-- @某人 -->
 
+        <ImageButton
+            android:id="@+id/add_user"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="0.2"
+            android:background="@null"
+            android:src="@drawable/toolbar_mention" />
+        <!-- 拍照按钮 -->
+
+        <ImageButton
+            android:id="@+id/camera_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="0.2"
+            android:background="@null"
+            android:src="@drawable/toolbar_camera" />
+        <!-- 选择图片 -->
+
+        <ImageButton
+            android:id="@+id/choose_images_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="0.2"
+            android:background="@null"
+            android:src="@drawable/toolbar_media" />
+        <!-- LBS按钮 -->
+
+        <ImageButton
+            android:id="@+id/location_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="0.2"
+            android:background="@null"
+            android:src="@drawable/toolbar_geo_off"
+            android:visibility="gone" />
+    </LinearLayout>
 
 </LinearLayout>
